# fuddly

./: pyproject.toml
src/: fuddly_shell.py
src/fuddly/data_models/file_formats/: pdf.py
src/fuddly/data_models/protocols/: http.py  usb.py
src/fuddly/data_models/tutorial/: myproto.py  tuto.py
src/fuddly/framework/: comm_backends.py  constraint_helpers.py  data_model.py  database.py  fuzzing_primitives.py  generic_data_makers.py  logger.py  monitor.py  node.py  node_builder.py  plumbing.py  scenario.py  tactics_helpers.py  target_helpers.py  value_types.py
src/fuddly/framework/dmhelpers/: generic.py  json.py  xml.py
src/fuddly/framework/knowledge/: feedback_handler.py
src/fuddly/framework/targets/: debug.py  printer.py  sim.py  ssh.py
src/fuddly/libs/: utils.py
src/fuddly/projects/: tuto_proj.py
